--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -40,7 +40,7 @@
                             ng-keydown="onSearchKeypress($event)"
                             type="text"
                             class="form-control"
-                            placeholder="Search for models..." />
+                            placeholder="Search for spells..." />
                     <div class="app-body">
                     </div>
                     <div class="app-footer app-icn" ng-show="search.is_focused" ng-click="clearSearch()">
