SEO metadata + social + title + logo

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -18,8 +18,8 @@
             <div class="app-header app-navbar app-shadow app-pad">
                 <div class="app-row app-middle">
                     <div class="app-body">
-                        <div class="logo">
-                            <img style="width: 100px; height: 40px" class="logo" ng-src="{{ logo }}" />
+                        <div class="logo" style="width: 300px;">
+                            <img src="http://dune.com/assets/glyph-128w.png" style="width: 45px; height: 45px; position: absolute;"/><div class="logo" style="margin-left: 60px; font-family: IBM Plex Sans,apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol; font-size: 20px; margin-top: 8px; width: 300px; font-weight: bold;">Dune Spellbook</div>
                         </div>
                     </div>
                 </div>
