Spellcasters page for reputation

--- a/src/app/components/model_tree/model_tree.html
+++ b/src/app/components/model_tree/model_tree.html
@@ -12,6 +12,12 @@
             </a>
         </li>
 
+        <li>
+            <a ui-sref="dbt.spellcasters()" class="menu-link menu-main">
+                Spellcasters
+            </a>
+        </li>
+
         <!-- [Spellbook] Only show project by default -->
         <!-- <li>
             <div class="switches">
