--- a/src/app/spellcasters/spellcasters.html
+++ b/src/app/spellcasters/spellcasters.html
@@ -32,8 +32,8 @@
                                             <td>
                                                 <div>
                                                     <span style="display: flex; flex-direction: row; align-items: center;">
-                                                        <img style="height: 2.5rem; border-radius: 9999px;" src="https://github.com/{{ spellcaster.name }}.png"/>
-                                                        <a style="margin-left: 0.5rem;" href="https://github.com/{{ spellcaster.name }}">{{ spellcaster.name }}</a>
+                                                        <img style="height: 2.5rem; border-radius: 9999px; width: 2.5rem; height: 2.5rem;" src="https://davidkell.autocode.dev/spellbook@dev/profile/?name={{ spellcaster.name }}"/>
+                                                        <a style="margin-left: 0.5rem;" href="https://dune.com/{{ spellcaster.name }}">{{ spellcaster.name }}</a>
                                                     </span>
                                                 </div>
                                             </td>
